<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="unknown_error">Unknown error occurred</string>
    
    <!-- Login screen strings -->
    <string name="login_title">Вход</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">example@gmail.com</string>
    <string name="login_password_label">Пароль</string>
    <string name="login_password_hint">Введите пароль</string>
    <string name="login_button_text">Вход</string>
    <string name="login_no_account">Нету аккаунта?</string>
    <string name="login_registration">Регистрация</string>
    <string name="login_forgot_password">Забыл пароль</string>
    <string name="login_vk_button">VK</string>
    <string name="login_ok_button">OK</string>
    
    <!-- Home screen strings -->
    <string name="home_search_hint">Search courses...</string>
    <string name="home_sort_by_date">По дате добавления</string>
    <string name="general">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="read_more">Подробнее</string>
    <string name="price">%1$s ₽</string>
    <string name="error_message">Что-то пошло не так</string>
    <string name="no_network_message">Отсутствует подключение к Интернету</string>
    <string name="retry">Повторить попытку</string>
</resources>